--- a/skel.html
+++ b/skel.html
@@ -6,11 +6,27 @@
 </head>
 
 <body>
-  <header>hi</header>
+  <header>
+    <img src="images/logo.png" alt="Yale School logo">
+    <h1>Yale School of Art</h1>
+    <a href="login.html"></a>
+  </header>
 
-  <nav>href</nav>
+  <nav>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="apply.html">Apply</a></li>
+    <li><a href="exhibits.html">Exhibitions</a></li>
+    <li><a href="publications.html">Publications</a></li>
+    <li><a href="news.html">News</a></li>
+    <li><a href="events.html">Events</a></li>
+  </nav>
 
-  <main>stuff</main>
+  <main>
+    <p>
+  </main>
 
-  <aside>hi</aside>
+  <aside>
+    <p>This school exists.</p>
+  </aside>
 </body>
