added aside text

--- a/skel.html
+++ b/skel.html
@@ -9,7 +9,7 @@
   <header>
     <img src="images/logo.png" alt="Yale School logo">
     <h1>Yale School of Art</h1>
-    <a href="login.html"></a>
+    <a href="login.html">Login</a>
   </header>
 
   <nav>
@@ -23,11 +23,16 @@
   </nav>
 
   <main>
-    <p>
+    <p>Add Content</p>
   </main>
 
   <aside>
-    <p>This school exists.</p>
+    <p>This website exists as an ongoing collaborative experiment in digital publishing and information sharing. Because
+      this website functions as a wiki, all members of the School of Art community—graduate students, faculty, staff,
+      and alums—have the ability to add new content and pages, and to edit most of the site’s existing content.
+
+      Content is the property of its various authors. When you contribute to this site, you agree to abide by Yale
+      University academic and network use policy, and to act as a responsible member of our community.</p>
   </aside>
 </body>
 
