--- a/skel.html
+++ b/skel.html
@@ -34,6 +34,21 @@
       Content is the property of its various authors. When you contribute to this site, you agree to abide by Yale
       University academic and network use policy, and to act as a responsible member of our community.</p>
   </aside>
+
+  <footer>
+    <p>Yale School of Art<br>1156 Chapel Street, POB 208339<br>New Haven, Connecticut, 06520-8339</p>
+    <div>
+      <ul>
+        <li><a href="support.html">Support</a></li>
+        <li><a href="visit.html">Visit</a></li>
+        <li><a href="https://www.instagram.com/yaleschoolofart/">Instagram</a></li>
+        <li><a href="https://www.facebook.com/YaleSchoolofArt/">Facebook</a></li>
+        <li><a href="http://yaleart.org/youtube">YouTube</a></li>
+        <li><a href="contact.html" </a></li>
+        <li><a href="https://your.yale.edu/policies-procedures/policies/1605-web-accessibility-policy">Accessibility at
+            Yale</a></li>
+      </ul>
+      <p>&copy; 2023</p>
 </body>
 
 </html>
