--- a/skel.html
+++ b/skel.html
@@ -48,7 +48,8 @@
         <li><a href="https://your.yale.edu/policies-procedures/policies/1605-web-accessibility-policy">Accessibility at
             Yale</a></li>
       </ul>
-      <p>&copy; 2023</p>
+    </div>
+    <p>&copy; 2023</p>
 </body>
 
 </html>
