--- a/skel.html
+++ b/skel.html
@@ -44,7 +44,7 @@
         <li><a href="https://www.instagram.com/yaleschoolofart/">Instagram</a></li>
         <li><a href="https://www.facebook.com/YaleSchoolofArt/">Facebook</a></li>
         <li><a href="http://yaleart.org/youtube">YouTube</a></li>
-        <li><a href="contact.html" </a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="https://your.yale.edu/policies-procedures/policies/1605-web-accessibility-policy">Accessibility at
             Yale</a></li>
       </ul>
