--- a/skel.html
+++ b/skel.html
@@ -3,6 +3,7 @@
 <head>
   <title>Yale School of Art</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
